# Robot

./: README.md  WebCam_Stream
David test/: index.js  webserver.js
MATE_Challenge_2017/: AccelerometerDriver.cpp  Arduino.ino  ArduinoDriver.ino  CompassDriver.cpp  Component.h  Driver.h  GenData.cpp  KNN_ImageRecognition.cpp  MATE_Challenge_2017.ino  MotorDriver.cpp  Motros.ino  PC_Controller.py  PiDriver.py  ProximityDriver.cpp  ROV GUI.html  RaspPi.py  Sensor.h  client.js  controler.js  index.html  locatorScripts.js  openCV_Lib.cpp  package-lock.json  package.json  webserver.js
MATE_Challenge_2017/Archive/: PC_Controller.py  RaspPi.py
MATE_Challenge_2017/Archive/Controller and server/: ServerTest.py
MATE_Challenge_2017/Archive/Other/: Motros.ino  ROV GUI.html
MATE_Challenge_2017/Controller and server/: Controller.py
MATE_Challenge_2017/Tail_Identification/: CMakeLists.txt  CMakeLists.txt.cmake  CMakeLists.txt.txt  GenData.cpp  KNNVariableSummary.txt  KNN_ImageRecognition.cpp  OpenCVNotes.txt  PropertySheetOpenCV3-64bit.props  classifications.xml  openCV_Lib.h
MATE_Challenge_2017/Tail_Identification/Original XMLs/: images.xml
MOTE_Challenge_2017/: GyroscopeDriver.cpp  LeakDriver.cpp  MOTE_Challenge_2017.ino  TemperatureDriver.cpp
